fix: endIcon is visible in tablet, added --tab-active-color css variable, removed required from Column id prop

--- a/src/HorizontalScrollWrapper/horizontalScrollWrapper.css
+++ b/src/HorizontalScrollWrapper/horizontalScrollWrapper.css
@@ -46,6 +46,15 @@
 }
 
 .endIcon {
+  z-index: var(--horizontall-scroll-wrapper-arrow-z-index);
+  position: absolute;
+  width: var(--horizontall-scroll-wrapper-arrow-width);
+  height: var(--horizontall-scroll-wrapper-arrow-height);
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.3), var(--horizontall-scroll-wrapper-gradient-color));
+  color: var(--horizontall-scroll-wrapper-arrow-color);
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
   right: 0;
   top: 0;
 }
